prevent movement on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 canvas{
     border: 1px solid black;
 }
+
+html, body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative;
+  }
